--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon server.js",
+    "start": "node server.js",
+    "dev": "nodemon server.js",
     "start:prod": "set NODE_ENV=production&&nodemon server.js",
     "debug": "ndb server.js",
     "watch:js": "parcel watch ./public/js/index.js --out-dir ./public/js --out-file bundler.js",
-    "build:js": "parcel watch ./public/js/index.js --out-dir ./public/js --out-file bundler.js"
+    "build:js": "parcel build ./public/js/index.js --out-dir ./public/js --out-file bundler.js"
   },
   "author": "Saman",
   "license": "ISC",
@@ -16,12 +17,13 @@
     "@babel/polyfill": "^7.8.7",
     "axios": "^0.19.2",
     "bcryptjs": "^2.4.3",
+    "compression": "^1.7.4",
     "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
+    "dotenv": "^7.0.0",
     "express": "^4.17.1",
     "express-mongo-sanitize": "^1.3.2",
-    "express-rate-limit": "^5.1.1",
+    "express-rate-limit": "^3.5.0",
     "helmet": "^3.21.2",
     "hpp": "^0.2.3",
     "html-to-text": "^5.1.1",
@@ -36,22 +38,22 @@
     "sharp": "^0.25.3",
     "slugify": "^1.3.6",
     "stripe": "^7.0.0",
-    "validator": "^12.2.0",
+    "validator": "^10.11.0",
     "xss-clean": "^0.1.1"
   },
   "devDependencies": {
-    "eslint": "^6.8.0",
-    "eslint-config-airbnb": "^18.0.1",
-    "eslint-config-prettier": "^6.9.0",
+    "eslint": "^5.16.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-config-prettier": "^4.1.0",
     "eslint-plugin-import": "^2.20.0",
     "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-node": "^11.0.0",
+    "eslint-plugin-node": "^8.0.1",
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-react": "^7.18.0",
     "parcel-bundler": "^1.12.4",
     "prettier": "^1.19.1"
   },
   "engines": {
-    "node": ">=8.0.0"
+    "node": "^10"
   }
 }
